--- a/travelsFront/app/templates/components/list-action.hbs
+++ b/travelsFront/app/templates/components/list-action.hbs
@@ -1,5 +1,5 @@
 {{#if iconButton}}
-	{{#paper-button type="submit" raised=true onClick=(action "handleClick") iconButton=iconButton }}{{fa-icon icon}}{{/paper-button}}
+	{{#paper-button raised=true onClick=(action "handleClick") iconButton=iconButton }}{{fa-icon icon}}{{/paper-button}}
 {{else}}
-	{{#paper-button type="submit" raised=true onClick=(action "handleClick") iconButton=iconButton }}{{value}}{{/paper-button}}
+	{{#paper-button raised=true primary=true onClick=(action "handleClick") iconButton=iconButton }}{{value}}{{/paper-button}}
 {{/if}}
