--- a/travelsFront/app/templates/components/model-form/controls.hbs
+++ b/travelsFront/app/templates/components/model-form/controls.hbs
@@ -1,7 +1,7 @@
 {{#paper-content classNames=""}}
     {{#paper-button 
         onClick=submit 
-        accent=true
+        primary=true
         raised=true
         disabled=inProgress
     }}{{ submitLabel }}{{/paper-button}}
