--- a/travelsFront/app/templates/components/petition-listing.hbs
+++ b/travelsFront/app/templates/components/petition-listing.hbs
@@ -11,25 +11,32 @@
 <td class="icon-cell">
 {{#if (can "approve petition")}}
 	{{#if (or (eq petition.status 2) (eq petition.status 3))}}
-    {{list-action action=(action "edit" petition) icon='pencil' iconButton=true confirm=false}}
-    {{list-action action=(action "del" petition) icon='trash-o' iconButton=true confirm=true}}
+    {{list-action action=(action "edit" petition) icon='pencil' tooltip-message=(t 'tooltip_edit')  iconButton=true confirm=false}}
+    {{list-action action=(action "del" petition) icon='trash-o' tooltip-message=(t 'tooltip_delete') iconButton=true confirm=true}}
   {{else if (eq petition.status 4)}}
-    {{list-action action=(action "undo" petition) icon='undo' iconButton=true confirm=true}}
+    {{list-action action=(action "undo" petition) icon='undo' tooltip-message=(t 'tooltip_undo') iconButton=true confirm=true}}
   {{/if}}
 {{else if (can "compensate petition")}}
   {{#if (or (eq petition.status 7) (eq petition.status 8))}}
-    {{list-action action=(action "edit" petition) icon='pencil' iconButton=true confirm=false}}
-    {{list-action action=(action "del" petition) icon='trash-o' iconButton=true confirm=true}}
+    {{list-action action=(action "edit" petition) icon='pencil' tooltip-message=(t 'tooltip_edit')  iconButton=true confirm=false}}
+    {{list-action action=(action "del" petition) icon='trash-o' tooltip-message=(t 'tooltip_delete') iconButton=true confirm=true}}
   {{else if (eq petition.status 9)}}
-    {{list-action action=(action "undo" petition) icon='undo' iconButton=true confirm=true}}
+    {{list-action action=(action "undo" petition) icon='undo' tooltip-message=(t 'tooltip_undo') iconButton=true confirm=true}}
   {{/if}}
 {{else}}
 	{{#if (or (eq petition.status 1) (eq petition.status 4) (eq petition.status 6))}}
-    {{list-action action=(action "edit" petition) icon='pencil' iconButton= true confirm=false}}
-    {{list-action action=(action "del" petition) icon='trash-o' iconButton=true confirm=true}}
+    {{list-action action=(action "edit" petition) icon='pencil' tooltip-message=(t 'tooltip_edit')  iconButton= true confirm=false}}
+    {{list-action action=(action "del" petition) icon='trash-o' tooltip-message=(t 'tooltip_delete') iconButton=true confirm=true}}
   {{else if (or (eq petition.status 2) (eq petition.status 7))}}
-    {{list-action action=(action "undo" petition) icon='undo' iconButton=true confirm=true}}
+    {{list-action action=(action "undo" petition) icon='undo' tooltip-message=(t 'tooltip_undo') iconButton=true confirm=true}}
   {{/if}}
-{{/if}}  
+{{/if}} 
 </td>
+
+
+
+
+
+
+
 
