Add proper messages to prompt windows

--- a/travelsFront/app/templates/components/petition-listing.hbs
+++ b/travelsFront/app/templates/components/petition-listing.hbs
@@ -12,25 +12,25 @@
 {{#if (can "approve petition")}}
 	{{#if (or (eq petition.status 2) (eq petition.status 3))}}
     {{list-action action=(action "edit" petition) icon='pencil' tooltip-message=(t 'tooltip_edit')  iconButton=true confirm=false}}
-    {{list-action action=(action "del" petition) icon='trash-o' tooltip-message=(t 'tooltip_delete') iconButton=true confirm=true}}
+    {{list-action action=(action "del" petition) icon='trash-o' tooltip-message=(t 'tooltip_delete') iconButton=true confirm=true promptTitle=(t 'prompt_delete_title') promptMessage=(t 'prompt_delete_message')}}
   {{else if (eq petition.status 4)}}
-    {{list-action action=(action "undo" petition) icon='undo' tooltip-message=(t 'tooltip_undo') iconButton=true confirm=true}}
+    {{list-action action=(action "undo" petition) icon='undo' tooltip-message=(t 'tooltip_undo') iconButton=true confirm=true promptTitle=(t 'prompt_undo_title') promptMessage=(t 'prompt_undo_message')}}
   {{else if (eq petition.status 9)}}
     {{list-action action=(action "view" petition) icon='eye' tooltip-message=(t 'tooltip_view') iconButton=true confirm=false}}
   {{/if}}
 {{else if (can "compensate petition")}}
   {{#if (or (eq petition.status 7) (eq petition.status 8))}}
     {{list-action action=(action "edit" petition) icon='pencil' tooltip-message=(t 'tooltip_edit')  iconButton=true confirm=false}}
-    {{list-action action=(action "del" petition) icon='trash-o' tooltip-message=(t 'tooltip_delete') iconButton=true confirm=true}}
+    {{list-action action=(action "del" petition) icon='trash-o' tooltip-message=(t 'tooltip_delete') iconButton=true confirm=true promptTitle=(t 'prompt_delete_title') promptMessage=(t 'prompt_delete_message')}}
   {{else if (eq petition.status 9)}}
-    {{list-action action=(action "undo" petition) icon='undo' tooltip-message=(t 'tooltip_undo') iconButton=true confirm=true}}
+    {{list-action action=(action "undo" petition) icon='undo' tooltip-message=(t 'tooltip_undo') iconButton=true confirm=true promptTitle=(t 'prompt_undo_title') promptMessage=(t 'prompt_undo_message')}}
   {{/if}}
 {{else}}
 	{{#if (or (eq petition.status 1) (eq petition.status 4) (eq petition.status 6))}}
     {{list-action action=(action "edit" petition) icon='pencil' tooltip-message=(t 'tooltip_edit')  iconButton= true confirm=false}}
-    {{list-action action=(action "del" petition) icon='trash-o' tooltip-message=(t 'tooltip_delete') iconButton=true confirm=true}}
+    {{list-action action=(action "del" petition) icon='trash-o' tooltip-message=(t 'tooltip_delete') iconButton=true confirm=true promptTitle=(t 'prompt_delete_title') promptMessage=(t 'prompt_delete_message')}}
   {{else if (or (eq petition.status 2) (eq petition.status 7))}}
-    {{list-action action=(action "undo" petition) icon='undo' tooltip-message=(t 'tooltip_undo') iconButton=true confirm=true}}
+    {{list-action action=(action "undo" petition) icon='undo' tooltip-message=(t 'tooltip_undo') iconButton=true confirm=true promptTitle=(t 'prompt_undo_title') promptMessage=(t 'prompt_undo_message')}}
   {{/if}}
 {{/if}} 
 </td>
