--- a/travelsFront/app/templates/components/petition-listing.hbs
+++ b/travelsFront/app/templates/components/petition-listing.hbs
@@ -24,6 +24,7 @@
     {{list-action action=(action "del" petition) icon='trash-o' tooltip-message=(t 'tooltip_delete') iconButton=true confirm=true promptTitle=(t 'prompt_delete_title') promptMessage=(t 'prompt_delete_message')}}
   {{else if (eq petition.status 9)}}
     {{list-action action=(action "undo" petition) icon='undo' tooltip-message=(t 'tooltip_undo') iconButton=true confirm=true promptTitle=(t 'prompt_undo_title') promptMessage=(t 'prompt_undo_message')}}
+    {{list-action action=(action "pdf" petition) icon='file-text-o' confirm=true}}
   {{/if}}
 {{else}}
 	{{#if (or (eq petition.status 1) (eq petition.status 4) (eq petition.status 6))}}
