--- a/travelsBackend/texpenses/templates/texpenses/content.html
+++ b/travelsBackend/texpenses/templates/texpenses/content.html
@@ -1,115 +1,4 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-
-<table style="width:100%">
-	<caption style='text-align: center;'><b>{% block caption %}Detailed Info{% endblock %}</b></caption>
-	<tr>
-		<td>Μετακινούμενος</td>
-		<td>{{petition.first_name}} {{petition.last_name}}</td>
-	</tr>
-
-	<tr>
-		<td>Ιδιότητα</td>
-		<td>{{petition.kind}}</td>
-	</tr>
-
-	<tr>
-		<td>Ειδικότητα</td>
-		<td>{{petition.specialty}}</td>
-	</tr>
-
-	<tr>
-		<td>Τραπεζικός Λογιαριασμός IBAN</td>
-		<td>{{petition.iban}}</td>
-	</tr>
-
-	<tr>
-		<td>Ημερομηνία μετακίνησης</td>
-		<td>Αναχώρηση</td>
-		<td>{{petition.depart_date}}</td>
-		<td>Επιστροφή</td>
-		<td>{{petition.return_date}}</td>
-	</tr>
-
-	<tr>
-		<td>Ημερομηνία εργασιών</td>
-		<td>Έναρξη</td>
-		<td>{{petition.task_start_date}}</td>
-		<td>Λήξη</td>
-		<td>{{petition.task_end_date}}</td>
-	</tr>
-
-	<tr>
-		<td>Εναπομείνασες ημέρες μετακίνησης εργασιών</td>
-		<td>Πριν</td>
-		<td>{{petition.trip_days_before}}</td>
-		<td>Μετά</td>
-		<td>{{petition.trip_days_after}}</td>
-	</tr>
-
-	<tr>
-		<td>Ημέρες μετακίνησης εργασιών</td>
-		<td>{{petition.transport_days}}</td>
-	</tr>
-
-	<tr>
-		<td>Διανυκτερεύσεις</td>
-		<td>{{petition.overnights_num}}</td>
-	</tr>
-
-	<tr>
-		<td>Αιτιολογία μετακίνησης</td>
-		<td>{{petition.reason}}</td>
-	</tr>
-
-	<tr>
-		<td>Τόπος μετακίνησης</td>
-		<td>Από:</td>
-		<td>{{petition.departure_point}}</td>
-		<td>Προς:</td>
-		<td>{{petition.arrival_point}}</td>
-	</tr>
-
-	<tr>
-		<td>Μέσο μετακίνησης</td>
-		<td>{{petition.means_of_transport}}</td>
-	</tr>
-
-</table>
-<br>
-<table style="width:100%">
-	<caption style='text-align: center;'><b>Βεβαιώνουμε την ακόλουθη δέσμευση πίστωσης:</b></caption>
-	<tr>
-		<td>ΚΑΤΗΓΟΡΙΑ ΔΑΠΑΝΗΣ</td>
-		<td>ΠΡΟΥΠΟΛΟΓΙΣΜΟΣ</td>
-	</tr>
-	<tr>
-		<td>Αεροπορικό εισιτήριο</td>
-		<td>{{transportation_cost}} {{transportation_default_currency}} </td>
-	</tr>
-
-	<tr>
-		<td>Διανυκτέρευση</td>
-		<td>{{overnights_num}} ημέρες x {{accommodation_cost}} = {{overnights_sum_cost}} {{accommodation_default_currency}}  </td>
-	</tr>
-
-	<tr>
-		<td>Ημερήσια αποζημίωση</td>
-		<td>{{overnights_num}} ημέρες x {{accommodation_cost}} = {{overnights_sum_cost}} {{accommodation_default_currency}}  </td>
-	</tr>
-
-	<tr>
-		<td>Κόστος συμμετοχής</td>
-		<td>{{participation_cost}} {{participation_default_currency}}  </td>
-	</tr>
-
-	<tr>
-		<td>Λοιπά έξοδα μετακίνησης</td>
-		<td>{{additional_expenses_initial}} {{additional_expenses_default_currency}}  </td>
-	</tr>
-
-	<tr>
-		<td><b>Σύνολο</td>
-		<td>{{total_cost}} ευρώ</td>
-	</tr>
-
-</table>
+{% block content_data %}
+<h1>Content goes here</h1>
+{% endblock %}
