--- a/travelsBackend/texpenses/templates/texpenses/protocol.html
+++ b/travelsBackend/texpenses/templates/texpenses/protocol.html
@@ -1,7 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<h5 style="text-align: right;">
-	ΔΣΕ:{{petition.dse}} Αρ.Μετ:{{petition.movement_id}}<br>
-	Αθήνα,{{petition.movement_date_protocol}}<br>
-	Αρ.Πρωτ.:{{petition.movement_protocol}}
-</h5>
 
+{% block protocol_content %}<h5 style="text-align: right;">
+	protocol
+</h5>
+{% endblock %}
