--- a/travelsBackend/texpenses/templates/texpenses/signatures.html
+++ b/travelsBackend/texpenses/templates/texpenses/signatures.html
@@ -1,18 +1,2 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<h5 style="text-align: left;">
-	Το σύνολο των δαπανών μετακίνησης καλύπτονται από τον λογαριασμό του έργου «{{project}}».
-</h5>
-<table style="width:100%; text-align:center;">
-	<tr style='text-align:center;'>
-		<th><h5>Ο μετακινούμενος</h5></th>
-		<th><h5>Ο Υπεύθυνος Έργου «{{project}}»</h5></td>
-		<th><h5>Ο Προϊστάμενος Οικονομικών Υπηρεσιών</h5></th>
-	</tr>
-
-	<tr style='text-align:center;'>
-		<td style='padding: 25px;'></td>
-		<td style='padding: 25px;'></td>
-		<td style='padding: 25px;'></td>
-	</tr>
-</table>
-
+{% block signature_content %}<h1>Signatures go here</h1> {% endblock %}
