--- a/travelsBackend/texpenses/templates/texpenses/movement_petition_decision/movement_petition_decision.html
+++ b/travelsBackend/texpenses/templates/texpenses/movement_petition_decision/movement_petition_decision.html
@@ -1,6 +1,6 @@
 {% extends "texpenses/base.html" %}
-{% block title %}Απόφαση Αποζημίωσης{% endblock %}
+{% block title %}Απόφαση Μετακίνησης{% endblock %}
 {% block protocol %}{% include "texpenses/decision_protocol.html" %}{% endblock %}
-{% block content %}{% include "texpenses/movement_compensation_decision/content.html" %}{% endblock %}
+{% block content %}{% include "texpenses/movement_petition_decision/content.html" %}{% endblock %}
 {% block signatures %}{% include "texpenses/decision_signature.html" %}{% endblock %}
 
