--- a/travelsFront/app/templates/components/petition-listing.hbs
+++ b/travelsFront/app/templates/components/petition-listing.hbs
@@ -15,6 +15,8 @@
     {{list-action action=(action "del" petition) icon='trash-o' tooltip-message=(t 'tooltip_delete') iconButton=true confirm=true promptTitle=(t 'prompt_delete_title') promptMessage=(t 'prompt_delete_message')}}
   {{else if (eq petition.status 4)}}
     {{list-action action=(action "undo" petition) icon='undo' tooltip-message=(t 'tooltip_undo') iconButton=true confirm=true promptTitle=(t 'prompt_undo_title') promptMessage=(t 'prompt_undo_message')}}
+    {{list-action action=(action "pdf" petition "1") icon='file-text-o' tooltip-message=(t 'pdf_travel_application') iconButton=true confirm=false}}
+    {{list-action action=(action "pdf" petition "2") icon='file-text-o' tooltip-message=(t 'pdf_travel_decision') iconButton=true confirm=false}}
   {{else if (eq petition.status 9)}}
     {{list-action action=(action "view" petition) icon='eye' tooltip-message=(t 'tooltip_view') iconButton=true confirm=false}}
   {{/if}}
@@ -24,7 +26,8 @@
     {{list-action action=(action "del" petition) icon='trash-o' tooltip-message=(t 'tooltip_delete') iconButton=true confirm=true promptTitle=(t 'prompt_delete_title') promptMessage=(t 'prompt_delete_message')}}
   {{else if (eq petition.status 9)}}
     {{list-action action=(action "undo" petition) icon='undo' tooltip-message=(t 'tooltip_undo') iconButton=true confirm=true promptTitle=(t 'prompt_undo_title') promptMessage=(t 'prompt_undo_message')}}
-    {{list-action action=(action "pdf" petition) icon='file-text-o' confirm=true}}
+    {{list-action action=(action "pdf" petition "3") icon='file-text-o' tooltip-message=(t 'pdf_compensation_application') iconButton=true confirm=false}}
+    {{list-action action=(action "pdf" petition "4") icon='file-text-o' tooltip-message=(t 'pdf_compensation_decision') iconButton=true confirm=false}}
   {{/if}}
 {{else}}
 	{{#if (or (eq petition.status 1) (eq petition.status 4) (eq petition.status 6))}}
