Enable delete action for user only when petition has status 1

--- a/travelsFront/app/templates/components/petition-listing.hbs
+++ b/travelsFront/app/templates/components/petition-listing.hbs
@@ -32,7 +32,9 @@
 {{else}}
 	{{#if (or (eq petition.status 1) (eq petition.status 4) (eq petition.status 6))}}
     {{list-action action=(action "edit" petition) icon='pencil' tooltip-message=(t 'tooltip_edit')  iconButton= true confirm=false}}
+  {{else if (eq petition.status 1)}}
     {{list-action action=(action "del" petition) icon='trash-o' tooltip-message=(t 'tooltip_delete') iconButton=true confirm=true promptTitle=(t 'prompt_delete_title') promptMessage=(t 'prompt_delete_message')}}
+  {{/if}}
   {{else if (or (eq petition.status 2) (eq petition.status 7))}}
     {{list-action action=(action "undo" petition) icon='undo' tooltip-message=(t 'tooltip_undo') iconButton=true confirm=true promptTitle=(t 'prompt_undo_title') promptMessage=(t 'prompt_undo_message')}}
   {{/if}}
