--- a/travelsFront/app/templates/secretary-petition.hbs
+++ b/travelsFront/app/templates/secretary-petition.hbs
@@ -1,12 +1,16 @@
 {{ page-toolbar pageTitle=(t "petition_edit.title") }}
 
 {{#paper-content classNames="md-padding"}}
-    {{# model-form/form model registerForm=this getModelForSave=getModelForSave successMessage="Petition saved" 
+    {{# model-form/form model registerForm=this getModelForSave=getModelForSave successMessage=(t 'petition_saved')  
             onError=(action 'onError') onSuccess=(action 'onSuccess') as |form| }}
         {{ form.messages }}
         {{ form.fields }}
         {{# form.controls }}
-            {{list-action action=(action "handleSubmit") confirm=true value=(t 'form.button.submit') promptTitle=(t 'prompt_submit_title') promptMessage=(t 'prompt_submit_message') }}
+            {{list-action action=(action "handleSubmit") 
+	            confirm=true value=(t 'form.button.submit') 
+	            promptTitle=(t 'prompt_submit_title') 
+	            promptMessage=(t 'prompt_secretary_submit_message') 
+            }}
         {{/ form.controls}}
     {{/ model-form/form }}
 {{/paper-content}}
