Translate profile update message

--- a/travelsFront/app/templates/profile.hbs
+++ b/travelsFront/app/templates/profile.hbs
@@ -1,4 +1,4 @@
 {{ page-toolbar pageTitle=(t "profile.title") }}
 {{#paper-content }}
-    {{ model-form/form model }}
+    {{ model-form/form model successMessage=(t 'profile_saved')}}
 {{/paper-content}}
