File upload support
- model field
- adapter modifications to handle file uploads
- model field transform

--- a/travelsFront/app/styles/app.scss
+++ b/travelsFront/app/styles/app.scss
@@ -192,3 +192,17 @@ table.responsive {
   overflow-x: auto;
   display: block;
 }
+
+
+.file-input {
+  overflow: hidden;
+  div.file {
+    padding-bottom: 45px;
+  }
+  div.delete button {
+    margin-bottom: 11px;
+  }
+  .should-delete md-icon {
+    color: #f00;
+  }
+}
