--- a/travelsFront/app/templates/petition-list.hbs
+++ b/travelsFront/app/templates/petition-list.hbs
@@ -9,7 +9,7 @@
           <th>Επώνυμο</th>
           <th>Έργο</th>
           <th>Προορισμός</th>
-          <th>Ημ/νια Δημιουργίας</th>
+          <th>Ημ/νία Δημιουργίας</th>
           <th>Τελευταία ανανέωση</th>
           <th>Ημ/νία Αναχώρησης</th>
           <th>Ημ/νία Επιστροφής</th>
