Put a placeholder in date-time tags

--- a/travelsFront/app/templates/components/model-form/fields/date.hbs
+++ b/travelsFront/app/templates/components/model-form/fields/date.hbs
@@ -19,7 +19,7 @@
         options=(hash format="d mmmm, yyyy")
         on-selected=(action handleDate) }}
     {{ pick-a-time
-        placeholder=''
+        placeholder=(t 'time_placeholder')
         flex=30
         required=fattrs.required
         disabled=fattrs.disabled
