--- a/travelsBackend/texpenses/templates/texpenses/application_protocol.html
+++ b/travelsBackend/texpenses/templates/texpenses/application_protocol.html
@@ -2,7 +2,7 @@
 {% block protocol_content%}
 <h5 style="text-align: right;">
 	ΔΣΕ:{{dse}} Αρ.Μετ:{{movement_id}}<br>
-	Αθήνα,{{movement_date_protocol}}<br>
+	Αθήνα,{{movement_date_protocol|date:"d/m/Y"}}<br>
 	Αρ.Πρωτ.:{{movement_protocol}}
 </h5>
 
