--- a/travelsBackend/texpenses/templates/texpenses/decision_protocol.html
+++ b/travelsBackend/texpenses/templates/texpenses/decision_protocol.html
@@ -3,7 +3,7 @@
 <h5 style="text-align: right;">
 	ΑΝΑΡΤΑΤΑΙ ΣΤΗ ΔΙΑΥΓΕΙΑ<br>
 	ΔΣΕ:{{dse}} Αρ.Μετ:{{movement_id}}<br>
-	Αθήνα,{{movement_date_protocol}}<br>
+	Αθήνα,{{movement_date_protocol|date:"d/m/Y"}}<br>
 	Αρ.Πρωτ.:{{movement_protocol}}
 </h5>
 
