--- a/travelsFront/app/templates/components/list-action.hbs
+++ b/travelsFront/app/templates/components/list-action.hbs
@@ -1,6 +1,6 @@
 {{#if iconButton}}
-	{{#paper-button raised=true onClick=(action "handleClick") iconButton=iconButton }}
-	{{fa-icon icon}}
+	{{#paper-button raised=true onClick=(action "handleClick") iconButton=iconButton warn=warn }}
+	{{paper-icon icon}}
 	{{#tooltip-on-element}}
       {{tooltip-message}}
   {{/tooltip-on-element}}{{/paper-button}}
