Add button for presidentApproval action in controller's list

--- a/travelsFront/app/templates/components/petition-listing.hbs
+++ b/travelsFront/app/templates/components/petition-listing.hbs
@@ -17,7 +17,7 @@
     {{list-action action=(action "undo" petition) icon='undo' tooltip-message=(t 'tooltip_undo') iconButton=true confirm=true promptTitle=(t 'prompt_undo_title') promptMessage=(t 'prompt_undo_message')}}
     {{list-action action=(action "pdf" petition "1") icon='file_download' tooltip-message=(t 'pdf_travel_application') iconButton=true confirm=false}}
     {{list-action action=(action "pdf" petition "2") icon='file_download' tooltip-message=(t 'pdf_travel_decision') iconButton=true confirm=false}}
-    {{list-action action=(action "approve" petition) icon='done' tooltip-message=(t 'presidentApproval') iconButton=true confirm=true promptTitle=(t 'prompt_done_title') promptMessage=(t 'prompt_done_message')}}
+    {{list-action action=(action "approve" petition) icon='done' tooltip-message=(t 'travel_presidentApproval') iconButton=true confirm=true promptTitle=(t 'prompt_done_title') promptMessage=(t 'prompt_done_message')}}
   {{/if}}
 {{else if (can "compensate petition")}}
   {{#if (or (eq petition.status 7) (eq petition.status 8))}}
@@ -27,6 +27,7 @@
     {{list-action action=(action "undo" petition) icon='undo' tooltip-message=(t 'tooltip_undo') iconButton=true confirm=true promptTitle=(t 'prompt_undo_title') promptMessage=(t 'prompt_undo_message')}}
     {{list-action action=(action "pdf" petition "3") icon='file_download' tooltip-message=(t 'pdf_compensation_application') iconButton=true confirm=false}}
     {{list-action action=(action "pdf" petition "4") icon='file_download' tooltip-message=(t 'pdf_compensation_decision') iconButton=true confirm=false}}
+    {{list-action action=(action "approve" petition) icon='done' tooltip-message=(t 'compensation_presidentApproval') iconButton=true confirm=true promptTitle=(t 'prompt_done_title') promptMessage=(t 'prompt_done_message')}}
   {{/if}}
 {{else}}
 	{{#if (eq petition.status 1)}}
