--- a/travelsFront/app/templates/components/petition-listing.hbs
+++ b/travelsFront/app/templates/components/petition-listing.hbs
@@ -7,7 +7,7 @@
 <td>{{to-date petition.updated}}</td>
 <td>{{to-date petition.task_start_date}}</td>
 <td>{{to-date petition.task_end_date}}</td>
-<td>{{petition.status}}</td>
+<td>{{petition.status_label}}</td>
 <td class="icon-cell">
 {{#if (can "approve petition")}}
 	{{#if (or (eq petition.status 2) (eq petition.status 3))}}
