--- a/travelsFront/app/templates/user-compensation.hbs
+++ b/travelsFront/app/templates/user-compensation.hbs
@@ -6,7 +6,7 @@
         {{ form.messages }}
         {{ form.fields }}
         {{# form.controls }}
-            {{list-action action=(action "handleSubmit") confirm=true value=(t 'form.button.submit') promptTitle=(t 'prompt_submit_title') promptMessage=(t 'prompt_submit_message') }}
+            {{list-action action=(action "handleSubmit") confirm=true value=(t 'form.button.submit') tooltip-message=(t 'tooltip_save_b4_submit') promptTitle=(t 'prompt_submit_title') promptMessage=(t 'prompt_submit_message') }}
         {{/ form.controls}}
     {{/ model-form/form }}
 {{/paper-content}}
