Implement list filter
Create a filter for the last name.
Implement reset capability which clears the input and runs the handleFilterEntry
function with empty value as parameter.

--- a/travelsFront/app/templates/components/list-filter.hbs
+++ b/travelsFront/app/templates/components/list-filter.hbs
@@ -1,2 +1,7 @@
-{{input value=value key-up=(action 'handleFilterEntry') placeholder="Filter By Last Name"}} 
+<div>
+	{{#paper-button raised=true bubbles=false onClick=(action "handleFilterEntry" value_name )}}Αναζήτηση{{/paper-button}}
+	{{input value=value_name  placeholder="Filter By Last Name"}}	
+	{{#paper-button raised=true bubbles=false onClick=(action "clearFilters")}}Clear{{/paper-button}}		
+</div>
 {{yield results}}
+
